# pointcloud_processing_server

./: CMakeLists.txt  README.md  package.xml
include/pointcloud_processing_server/: pointcloud_process_publisher.h  pointcloud_subtraction.h  pointcloud_task_creation.h  pointcloud_transforms.h  pointcloud_utilities.h  server.h
launch/: rviz_with_camera.launch
msg/: pointcloud_task.msg  pointcloud_task_result.msg
param/map_maker/: map_maker_pcl.yaml
param/pcl_process_from_yaml/: cylinder.yaml  plane_cylinder.yaml  plane_cylinder_cylinder.yaml
param/pointcloud_process_from_yaml/: basic.yaml  plane.yaml  plane_plane_cylinder.yaml  plane_plane_cylinder_cylinder.yaml  tunnel_basic.yaml
rviz/: camera_only.rviz  rviz_splash.odg
src/: map_maker_pcs.cpp  moving_least_sqaures.cpp  pointcloud_process_publisher.cpp  pointcloud_subtraction.cpp  pointcloud_task_creation.cpp  pointcloud_transforms.cpp  pointcloud_utilities.cpp  server.cpp  test.cpp
srv/: pointcloud_process.srv
